# zero2prod

./: Cargo.toml  README.md
src/: lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
